# s2-sdk-rust

./: .gitignore  .gitmodules  CHANGELOG.md  Cargo.toml  LICENSE  README.md  RELEASING.md  build.rs  cliff.toml  clippy.toml  release-plz.toml
.github/workflows/: ci.yml  release-tag.yml  release.yml  update_protos.yaml
bindings/python/: Cargo.toml  pyproject.toml
bindings/python/examples/: bag.py
bindings/python/src/: client.rs  lib.rs  types.rs
examples/: basic.rs  consumer.rs  create_basin.rs  create_stream.rs  delete_basin.rs  delete_stream.rs  docs_account_and_basins.rs  docs_configuration.rs  docs_overview.rs  docs_streams.rs  explicit_trim.rs  get_latest_record.rs  issue_access_token.rs  list_all_basins.rs  list_streams.rs  producer.rs  reconfigure_basin.rs  reconfigure_stream.rs
macros/: Cargo.toml
macros/src/: lib.rs
src/: api.rs  append_session.rs  batching.rs  client.rs  lib.rs  ops.rs  producer.rs  request.rs  retry.rs  service.rs  service_request.rs  streams.rs  types.rs
src/request/: account.rs  basin.rs
src/sdk/: Cargo.toml  build.rs
src/sdk/examples/: consumer.rs  create_basin.rs  delete_basin.rs  explicit_trim.rs  list_streams.rs  producer.rs  reconfigure_basin.rs  reconfigure_stream.rs
src/sdk/src/: append_session.rs  batching.rs  client.rs  lib.rs  service.rs
src/sdk/src/service/: account.rs  basin.rs  stream.rs
src/service/: account.rs  basin.rs  stream.rs
src/service/stream/: batching.rs  read_resumption.rs  read_session.rs
src/service_request/: account.rs  basin.rs
src/session/: append.rs  mod.rs  read.rs
src/types/: Cargo.toml  build.rs
src/types/src/: api.rs  lib.rs  types.rs
src/util/: secret_string.rs
sync_docs/: Cargo.toml
sync_docs/src/: lib.rs
tests/: account_ops.rs  basin_ops.rs  metrics_ops.rs  stream_ops.rs
tests/common/: mod.rs
