[package]
name = "streamstore"
description = "DEPRECATED: Use s2-sdk instead"
version = "0.21.1"
edition = "2024"
license = "Apache-2.0"
keywords = ["wal", "grpc", "s2", "log", "stream"]
repository = "https://github.com/s2-streamstore/s2-sdk-rust"
homepage = "https://github.com/s2-streamstore/s2-sdk-rust"

[lib]
name = "s2"
path = "src/lib.rs"

[package.metadata.docs.rs]
features = ["connector"]
cargo-args = ["-Zunstable-options", "-Zrustdoc-scrape-examples"]

[[example]]
# `doc-scrape-examples` requires *any* one example to specify the option.
name = "create_basin"
doc-scrape-examples = true

[dependencies]
async-stream = "0.3.6"
backon = "1.5.2"
bytes = "1.10.1"
futures = "0.3.31"
http = "1.3.1"
hyper = "1.7.0"
hyper-util = "0.1.16"
prost = "0.14.1"
prost-types = "0.14.1"
rand = "0.9.2"
regex = "1.11.2"
secrecy = "0.10.3"
sync_docs = "0.2.0"
thiserror = "2.0.16"
tokio = { version = "1.47.1", features = ["time"] }
tokio-muxt = "0.6.0"
tokio-stream = "0.1.17"
tonic = { version = "0.14.2", features = [
    "tls-aws-lc",
    "tls-webpki-roots",
    "zstd",
] }
tonic-prost = "0.14.2"
tonic-side-effect = "0.4.0"
tower-service = "0.3.3"
tracing = "0.1.41"
uuid = { version = "1.18.1", features = ["v4", "fast-rng"] }

[build-dependencies]
tonic-build = { version = "0.14.2", optional = true }
tonic-prost-build = { version = "0.14.2", optional = true }

[dev-dependencies]
rstest = "0.26.1"
tokio = { version = "1.47.1", features = ["full", "test-util"] }
tokio-stream = "0.1.17"

[features]
connector = []
prost-build = ["dep:tonic-build", "dep:tonic-prost-build"]

[lints.clippy]
unused_async = "deny"
