[package]
name = "s2-sdk"
description = "Rust SDK for S2"
version = "0.22.5"
edition = "2024"
license = "MIT"
keywords = ["s2", "durable", "streams", "client", "sdk"]
categories = ["api-bindings", "database"]
repository = "https://github.com/s2-streamstore/s2-sdk-rust"
homepage = "https://github.com/s2-streamstore/s2-sdk-rust"

[package.metadata.docs.rs]
cargo-args = ["-Zunstable-options", "-Zrustdoc-scrape-examples"]

[[example]]
# `doc-scrape-examples` requires *any* one example to specify the option.
name = "create_basin"
doc-scrape-examples = true

[dependencies]
async-compression = "0.4.32"
async-stream = "0.3.6"
bytes = "1.11.0"
futures = "0.3.31"
http = "1.4.0"
hyper = "1.8.1"
prost = "0.14.1"
rand = "0.9.2"
reqwest = { version = "0.13.1", default-features = false, features = [
    "json",
    "stream",
    "query",
    "gzip",
    "zstd",
    "rustls",
] }
s2-api = "0.3.0"
s2-common = "0.3.0"
secrecy = "0.10.3"
serde = { version = "1.0.228" }
serde_json = "1.0.148"
thiserror = "2.0.16"
time = "0.3.44"
tokio = { version = "1.48.0", features = ["time", "macros", "io-util"] }
tokio-muxt = "0.6.0"
tokio-stream = "0.1.17"
tokio-util = { version = "0.7.17", features = ["rt", "codec"] }
tracing = "0.1.41"
url = "2.5.7"
urlencoding = "2.1.3"
uuid = { version = "1.19.0", features = ["v4", "fast-rng"] }

[features]
_hidden = []

[dev-dependencies]
assert_matches = "1.5.0"
rstest = "0.26.1"
test-context = { version = "0.5.4" }
tokio = { version = "1.48.0", features = ["full", "test-util"] }
tokio-shared-rt = "0.1.0"
