[package]
name = "s2-sdk"
description = "Rust SDK for S2"
version = "0.24.0"
edition = "2024"
license = "MIT"
keywords = ["s2", "durable", "streams", "client", "sdk"]
categories = ["api-bindings", "database"]
repository = "https://github.com/s2-streamstore/s2-sdk-rust"
homepage = "https://github.com/s2-streamstore/s2-sdk-rust"

[package.metadata.docs.rs]
cargo-args = ["-Zunstable-options", "-Zrustdoc-scrape-examples"]

[[example]]
# `doc-scrape-examples` requires *any* one example to specify the option.
name = "create_basin"
doc-scrape-examples = true

[dependencies]
async-compression = { version = "0.4", features = ["tokio", "gzip", "zstd"] }
async-stream = "0.3.6"
async-trait = "0.1"
bytes = "1.11.0"
futures = "0.3.31"
http = "1.4.0"
http-body-util = "0.1"
hyper = "1.8.1"
hyper-rustls = { version = "0.27", default-features = false, features = [
    "http2",
    "native-tokio",
    "aws-lc-rs",
    "tls12",
] }
hyper-util = { version = "0.1", features = [
    "client-legacy",
    "tokio",
    "http1",
    "http2",
] }
prost = "0.14.3"
rand = "0.10.0"
rustls = { version = "0.23", default-features = false, features = [
    "aws-lc-rs",
    "std",
] }
s2-api = "0.27"
s2-common = "0.27"
secrecy = "0.10.3"
serde = { version = "1.0.228" }
serde_json = "1.0.149"
serde_urlencoded = "0.7"
thiserror = "2.0.18"
time = "0.3.47"
tokio = { version = "1.49.0", features = ["time", "macros", "io-util", "sync"] }
tokio-muxt = "0.7.0"
tokio-stream = "0.1.18"
tokio-util = { version = "0.7.18", features = ["rt", "codec"] }
tracing = "0.1.44"
url = "2.5.8"
urlencoding = "2.1.3"
uuid = { version = "1.20.0", features = ["v4", "fast-rng"] }

[features]
_hidden = []

[dev-dependencies]
assert_matches = "1.5.0"
rstest = "0.26.1"
test-context = { version = "0.5.4" }
tokio = { version = "1.49.0", features = ["full", "test-util"] }
tokio-shared-rt = "0.1.0"
